--- a/.github/workflows/deploy-to-prod-test.yml
+++ b/.github/workflows/deploy-to-prod-test.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # This MUST be in sync with the DEPLOYMENT_TIME below (and is in UTC)
     # Set to 5 mins past the hour to avoid the hourly crush
-    - cron: '45 20 * * 1'
+    - cron: '0 21 * * 1'
   workflow_dispatch:
     inputs:
       cluster:
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       FREEZE_TIME: '10pm UTC Tuesday'
-      DEPLOYMENT_TIME: '8:45pm UTC Monday'
+      DEPLOYMENT_TIME: '9pm UTC Monday'
     steps:
       - name: calculate date
         id: date
@@ -105,4 +105,4 @@ jobs:
           date: ${{ steps.date.outputs.date }}
           workflow: output-inputs.yml
           timezone: UTC
-          inputs: ${{ toJson(steps.json-string.outputs.inputs_json) }}
+          inputs: ${{ steps.json-string.outputs.inputs_json }}
