--- a/.github/workflows/deploy-to-prod-test.yml
+++ b/.github/workflows/deploy-to-prod-test.yml
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       FREEZE_TIME: '10pm UTC Tuesday'
-      DEPLOYMENT_TIME: '9:10pm UTC Monday'
+      DEPLOYMENT_TIME: '9:36pm UTC Monday'
     steps:
       - name: calculate date
         id: date
@@ -85,9 +85,11 @@ jobs:
           EOF
           )
 
-          echo "inputs_json<<EOF" >> "$GITHUB_OUTPUT"
-          echo "$inputs_json" >> "$GITHUB_OUTPUT"
-          echo "EOF" >> $GITHUB_OUTPUT
+          {
+            echo "inputs_json<<EOF"
+            echo "$inputs_json"
+            echo "EOF"
+          } >> "$GITHUB_OUTPUT"
 
           # echo "inputs_json=$inputs_json" >> "$GITHUB_OUTPUT"
 
