--- a/.github/workflows/deploy-to-prod-test.yml
+++ b/.github/workflows/deploy-to-prod-test.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           freeze_secs="$(date +%s --date "$FREEZE_TIME")"
           deploy_secs="$(date +%s --date "$DEPLOYMENT_TIME")"
-          num_schedules=$(echo -e '${{ toJson(vars) }}' | jq 'keys | map(select(startswith("_SCHEDULE_"))) | length')
+          num_schedules=$(echo "${{ toJson(vars) }}" | jq 'keys | map(select(startswith("_SCHEDULE_"))) | length')
           if [[ "$freeze_secs" -gt "$deploy_secs" ]]; then
             date="$(date --date "$DEPLOYMENT_TIME + $num_schedules seconds + 1 week")"
           else
