--- a/.github/workflows/deploy-to-prod-test.yml
+++ b/.github/workflows/deploy-to-prod-test.yml
@@ -107,4 +107,13 @@ jobs:
           date: ${{ steps.date.outputs.date }}
           workflow: output-inputs.yml
           timezone: UTC
-          inputs: ${{ steps.json-string.outputs.inputs_json }}
+          inputs: |
+            '{
+              "cluster": "${{ inputs.cluster }}",
+              "chart_name": "${{ inputs.chart_name }}",
+              "chart_version": "${{ inputs.chart_version }}",
+              "values_filename": "${{ inputs.values_filename }}",
+              "description": "${{ inputs.description }}",
+              "slack_channel": "dscc-gha-prod-deploys",
+              "int_checks_status": "true"
+            }'
