--- a/.github/workflows/test-output.yml
+++ b/.github/workflows/test-output.yml
@@ -18,6 +18,6 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Call action
-        uses: ./github/actions/output-job-inputs
+        uses: ./.github/actions/output-job-inputs
         with:
           token: ${{ steps.github-app.outputs.token }}
