--- a/.github/actions/output-job-inputs/action.yml
+++ b/.github/actions/output-job-inputs/action.yml
@@ -10,6 +10,8 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - uses: actions/checkout@3
+
     - uses: actions/github-script@7
       env:
         GITHUB_ACTION_PATH: ${{ github.action_path }}
