--- a/.github/actions/output-job-inputs/action.yml
+++ b/.github/actions/output-job-inputs/action.yml
@@ -12,7 +12,7 @@ runs:
   steps:
     - uses: actions/checkout@3
 
-    - uses: actions/github-script@7
+    - uses: actions/github-script@v7
       env:
         GITHUB_ACTION_PATH: ${{ github.action_path }}
       with:
