--- a/.github/actions/output-job-inputs/action.yml
+++ b/.github/actions/output-job-inputs/action.yml
@@ -16,12 +16,12 @@ runs:
       with:
         script: |
           const { GITHUB_ACTION_PATH } = process.env;
-          const runScript = require(`${GITHUB_ACTION_PATH}/output-action.js`);
+          const script = require(`${GITHUB_ACTION_PATH}/dist/index.js`);
 
           const scriptInputs = {
             token: "${{ inputs.token }}",
             repo: "${{ github.repository }}"
           };
 
-          await runScript({ github, context, core }, scriptInputs);
+          await script({ github, context, core }, scriptInputs);
 
