--- a/.github/actions/output-job-inputs/action.yml
+++ b/.github/actions/output-job-inputs/action.yml
@@ -20,6 +20,6 @@ runs:
             owner: owner,
             repo: repo,
           };
-          const variables = github.listRepoVariables(ownerRepo);
+          const variables = octokit.rest.actions.listRepoWorkflows(ownerRepo);
           console.log(variables);
 
