--- a/.github/workflows/test-output.yml
+++ b/.github/workflows/test-output.yml
@@ -3,6 +3,9 @@ name: Workflow to test outputting variable relevant info
 on:
   workflow_dispatch:
 
+# permissions:
+#   actions: read
+
 jobs:
   run-action:
     runs-on: ubuntu-latest
