--- a/.github/actions/output-job-inputs/action.yml
+++ b/.github/actions/output-job-inputs/action.yml
@@ -14,6 +14,7 @@ runs:
       env:
         GITHUB_ACTION_PATH: ${{ github.action_path }}
       with:
+        github_token: ${{ inputs.token }}
         script: |
           const { owner, repo } = context.repo;
 
