--- a/.github/actions/output-job-inputs/action.yml
+++ b/.github/actions/output-job-inputs/action.yml
@@ -13,30 +13,37 @@ inputs:
 runs:
   using: "composite"
   steps:
-  - name: Generate Summary Table
+  - name: Generate Deployment Summary
     uses: actions/github-script@v6
     with:
       script: |
-        // Get the JSON input as a string
+        const core = require('@actions/core');
+        const summary = core.summary;
+
+        // Retrieve the input JSON string and parse it.
         const inputJson = core.getInput('variables_json');
-        // Parse it to get an object
         const variables = JSON.parse(inputJson);
 
-        // Start constructing the markdown table
-        let markdown = `| Variable Name | Cluster Name | Chart Name | Version |\n`;
-        markdown += `| ------------- | ------------ | ---------- | ------- |\n`;
+        // Prepare the table rows: start with a header row.
+        let tableRows = [];
+        tableRows.push([
+          { data: 'Variable Name', header: true },
+          { data: 'Cluster Name', header: true },
+          { data: 'Chart Name', header: true },
+          { data: 'Version', header: true }
+        ]);
 
-        // Process each key that starts with '_SCHEDULE_'
+        // Iterate over each key starting with '_SCHEDULE_'
         for (const key in variables) {
           if (key.startsWith('_SCHEDULE_')) {
             const value = variables[key];
-            // Split value on the first comma.
+            // Split the value on the first comma.
             const commaIndex = value.indexOf(',');
             if (commaIndex === -1) {
               console.log(`No comma found for ${key}, skipping`);
               continue;
             }
-            // The JSON part is after the comma.
+            // Everything after the comma should be a JSON string.
             const jsonStr = value.substring(commaIndex + 1).trim();
             let data;
             try {
@@ -50,17 +57,22 @@ runs:
             const chartName = data.chart_name || '';
             const version = data.version || '';
 
-            // Append a row to the markdown table.
-            markdown += `| ${key} | ${clusterName} | ${chartName} | ${version} |\n`;
+            // Append a row for this variable.
+            tableRows.push([
+              { data: key },
+              { data: clusterName },
+              { data: chartName },
+              { data: version }
+            ]);
           }
         }
 
-        // Write the summary to the GitHub Actions summary file if available.
-        if (process.env.GITHUB_STEP_SUMMARY) {
-          const fs = require('fs');
-          fs.appendFileSync(process.env.GITHUB_STEP_SUMMARY, markdown);
-        } else {
-          console.log("GITHUB_STEP_SUMMARY not defined. Printing markdown to log:");
-          console.log(markdown);
-        }
+        // Build the summary with a heading and the table.
+        await summary
+          .addHeading('Deployment Summary', 2)
+          .addTable(tableRows)
+          .write();
+      with:
+        variables_json: ${{ inputs.variables_json }}
+
 
