--- a/.github/actions/output-job-inputs/action.yml
+++ b/.github/actions/output-job-inputs/action.yml
@@ -22,7 +22,7 @@ runs:
 
         // Retrieve the input JSON string and parse it.
         const inputJson = core.getInput('variables_json');
-        console.log('** variables input **', inputJson);
+        console.log('** variables input **', ${{ inputs.variables_json }});
         const variables = JSON.parse(inputJson);
 
         // Prepare the table rows: start with a header row.
